--- a/Calc/src/App.css
+++ b/Calc/src/App.css
@@ -1,42 +1,48 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+*, *::before, *::after 
+{
+  box-sizing: border-box;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+body 
+{
+  margin: 0;
+  background: linear-gradient(to right, rgba(25, 25, 45, 1), rgb(63, 63, 92)) ;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.calc-grid 
+{
+  display: grid;
+  margin-top: 2rem;
+  grid-template-columns: repeat(4, 6rem);
+  grid-template-rows: minmax(7rem, auto) repeat(5, 6rem);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.bigDigit
+{
+  grid-column: span 2;
 }
 
-.card {
-  padding: 2em;
+.output
+{
+  grid-column: span 4;
+  background-color: rgba(25, 25, 45, 0.75);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: space-around;
+  padding: 1rem;
+  word-wrap: break-word;
+  word-break: break-all;
 }
 
-.read-the-docs {
-  color: #888;
+.output .firstNumber 
+{
+  color: rgba(255, 255, 255, 0.7);
+  font-size: 2rem;
+}
+
+.output .secNumber
+{
+  color: rgb(255, 255, 255);
+  font-size: 3rem;
 }
