--- a/Calc/src/App.css
+++ b/Calc/src/App.css
@@ -6,18 +6,20 @@
 body 
 {
   margin: 0;
-  background: linear-gradient(to right, rgba(25, 25, 45, 1), rgb(63, 63, 92)) ;
+  background: linear-gradient(to right, rgb(50, 50, 73), rgb(63, 63, 85)) ;
 }
 
 .calc-grid 
 {
   display: grid;
   margin-top: 2rem;
+  margin-left: 2rem;
+  justify-content: center;
   grid-template-columns: repeat(4, 6rem);
   grid-template-rows: minmax(7rem, auto) repeat(5, 6rem);
 }
 
-.bigDigit
+.big-tile
 {
   grid-column: span 2;
 }
@@ -25,7 +27,7 @@ body
 .output
 {
   grid-column: span 4;
-  background-color: rgba(25, 25, 45, 0.75);
+  background-color: rgba(25, 25, 45, 0.95);
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -46,3 +48,19 @@ body
   color: rgb(255, 255, 255);
   font-size: 3rem;
 }
+
+.calc-grid > button 
+{
+  cursor: pointer;
+  font-size: 2rem;
+  border: 1px solid rgb(117, 115, 115);
+  outline: none;
+  background-color: rgba(255, 255, 255, 0.9);
+}
+
+.calc-grid > button:hover,
+.calc-grid > button:focus
+{
+  background-color: rgb(193, 193, 194);
+}
+
